Задание 1. Создана главная страница с помощью технологии flexbox, добавлены стили оформления карточек товара.

--- a/Task1/Views/Home/Index.cshtml
+++ b/Task1/Views/Home/Index.cshtml
@@ -1,8 +1,51 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+﻿<div class="my-flex-container">  
+       
+    <div class="flex-card">
+        <img class="card-img" src="https://cagliari.delivery/images/dishes/capriccio_1.jpg">
+        <h4 class="card-name">Capriccio</h4>
+        <div class="card-description"> Сыр моцарелла, Соус "Барбекю", Соус "Кальяри", Пепперони, Овощи гриль, Бекон, Ветчина</div>
+        <div class="card-footer">
+             <div class="card-price">740 &#8381;</div>
+             <div class="card-weight">980 гр.</div>
+             <a href="#" class="button-link">В корзину</a>    
+        </div>
+    </div>
+    
+    
+    <div class="flex-card">
+        <img class="card-img" src="https://cagliari.delivery/images/dishes/xxxl_1.jpg">    
+        <h4 class="card-name">XXXL</h4>
+        <div class="card-description"> Сыр моцарелла, Соус "1000 островов", Куриный рулет, Ветчина, Колбаски охотничьи, Бекон, Сервелат, Огурцы маринованные</div>
+        <div class="card-footer">
+            <div class="card-price">880 &#8381;</div>
+            <div class="card-weight">1440 гр.</div>
+            <a href="#" class="button-link">В корзину</a>    
+        </div>
+    </div>    
+    
+    <div class="flex-card">
+        <img class="card-img" src="https://cagliari.delivery/images/dishes/4_vkusa_1.jpg">
+        <h4 class="card-name">4 вкуса</h4>
+        <div class="card-description"> Соус "1000 островов", Сыр моцарелла, Рулет куриный, Ветчина, Пепперони, Сыр пармезан</div>
+        <div class="card-footer">
+            <div class="card-price">530 &#8381;</div>
+            <div class="card-weight">540 гр.</div>
+            <a href="#" class="button-link">В корзину</a>    
+        </div>
+    </div>
+    
+    
+    <div class="flex-card">
+        <img class="card-img" src="https://cagliari.delivery/images/dishes/amazonka_1.jpg">
+        <h4 class="card-name">Амазонка</h4>
+        <div class="card-description"> Соус "Томатный", Сыр моцарелла, Куриная грудка, Брокколи, Огурцы маринованные </div>
+        <div class="card-footer">
+             <div class="card-price">550 &#8381;</div>
+             <div class="card-weight">600 гр.</div>
+             <a href="#" class="button-link">В корзину</a>
+    
+        </div>
+    </div>
+       
+  
 </div>
