--- a/Task1/wwwroot/css/site.css
+++ b/Task1/wwwroot/css/site.css
@@ -20,3 +20,81 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.col{
+    width: 60px;
+}
+
+.my-flex-container {
+    display: flex;
+    flex-direction: row;    
+    flex-wrap: wrap;
+}
+
+.flex-card {
+    border: 2px solid;
+    border-color: white;
+    width: 30%;
+    height: 40%;
+    padding: 5px;
+    background-color: white;
+    border-radius: 5%;
+    
+}
+.flex-card:hover{
+    
+    border-color:  #4CAF50;
+}
+
+.card-img {
+    border-radius: 10%
+}
+
+.card-name{
+    font-family:Calibri;
+    font-size: 20px;
+    font-weight: bold;
+    color:grey;
+}
+.card-description {
+    font-family: Calibri;
+    font-size: 15px;
+    height: 120px;
+}
+
+.card-footer {
+    background-color: white;
+    border-radius: 20%;
+    margin-block-end: 10px;
+    justify-content: center;
+}
+
+.card-price {
+    font-size: 25px;
+    font-weight: bold;
+    color: dimgray;
+    display: inline-block;
+}
+
+.card-weight {
+    display: inline-block;
+    
+}
+
+.button-link {
+    border: 2px solid;
+    display: block;
+    padding: 10px 20px;
+    background-color: #80c142;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+ 
+    cursor: pointer;
+    border-radius: 20px;
+}
+.button-link:hover{
+    background-color: white;    
+    border-color:#80c142;
+    color: #80c142;
+}
