--- a/TaskTwo/Views/Home/Index.cshtml
+++ b/TaskTwo/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="flex-card">
             <img class="card-img" src="@item.Image">
             <h4 class="card-name">@item.Name</h4>
-            <div class="card-description"> @item.Ingredients </div>
+            <div class="card-ingredients"> @item.Ingredients </div>
             <div class="card-footer">
                 <div class="card-price">@item.Price &#8381;</div>
                 <div class="card-weight">@item.Weight гр.</div>
