Задача 5. Добавлено открытие страницы details при нажатии на изображение в карточке товара

--- a/TaskTwo/Views/Home/Details.cshtml
+++ b/TaskTwo/Views/Home/Details.cshtml
@@ -5,7 +5,7 @@
 
 <div class="flex-card">
     <img class="card-img" src="@Model.Image">
-    <a asp-action="Details" asp-route-id="Id" class="card-name">@Model.Name</a>
+    <h4 class="card-name">@Model.Name</h4>
     <div class="card-ingredients"> @Model.Ingredients </div>
     <div class="card-footer">
         <div class="card-price">@Model.Price &#8381;</div>
