--- a/TaskTwo/Views/Home/IndexNew.cshtml
+++ b/TaskTwo/Views/Home/IndexNew.cshtml
@@ -10,7 +10,7 @@
     @foreach(var item in Model){
         <div class="flex-card">
             <img id="my-img" class="card-img" data-id="@item.Id" src="@item.Image">
-            <h4 id ="open-modal" data-id="@item.Id" class="card-name" >@item.Name</h4>
+            <div id ="open-modal" data-id="@item.Id" class="card-name" >@item.Name</div>
             <div class="card-ingredients"> @item.Ingredients </div>
             <div class="card-footer">
                 <div class="card-price">@item.Price &#8381;</div>
@@ -20,36 +20,73 @@
         </div>
     }
 
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="pizzaModal" tabindex="-1" role="dialog" aria-labelledby="pizzaModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="myModalLabel">Заголовок модального окна</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <h5 class="modal-title" id="pizzaModalLabel">Пицца</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                   буквально Details...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
-                    <button type="button" class="btn btn-primary">Сохранить</button>
+                    <img id="modalImg" src="" class="img-fluid mb-3" />
+                    <p id="modalIngredients"></p>
+                    <p><strong>Цена:</strong> <span id="modalPrice"></span> &#8381;</p>
+                    <p><strong>Вес:</strong> <span id="modalWeight"></span> гр.</p>
                 </div>
             </div>
         </div>
     </div>
-</div>   
 
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script>     
+        $('.card-name').on('click', function (e) {
+            const $card = $(this).closest('.flex-card');
+            const pizza = {
+                name: $(this).text(),
+                image: $card.find('.card-img').attr('src'),
+                ingredients: $card.find('.card-ingredients').text(),
+                price: $card.find('.card-price').text(),
+                weight: $card.find('.card-weight').text()
+            };
 
-    $('#open-modal').on('click', function(){
-        var pizza = this.closest('flex-card')
-        $('#myModal').modal('show');
-    });
+            ShowPizza(pizza);
+        });
+
 
     
+
+        $('.card-img').on('click', function (e) {
+            const pizzaId = $(this).data('id');
+
+            $.ajax({
+                url: '/Home/GetPizzaById',
+                type: 'GET',
+                data: { id: pizzaId },
+                success: function (pizza) {
+                    if (pizza.error) {
+                        alert(pizza.error);
+                        return;
+                    }
+                    ShowPizza(pizza); 
+                },
+                error: function () {
+                    alert('Ошибка при получении данных о пицце.');
+                }
+            });
+        });
+
+        function ShowPizza(pizza) {
+            $('#pizzaModalLabel').text(pizza.name);
+            $('#modalImg').attr('src', pizza.image);
+            $('#modalIngredients').text(pizza.ingredients);
+            $('#modalPrice').text(pizza.price);
+            $('#modalWeight').text(pizza.weight);
+            $('#pizzaModal').modal('show');
+        }
+               
 </script>
