--- a/TaskThree/Views/Home/PizzaEdit.cshtml
+++ b/TaskThree/Views/Home/PizzaEdit.cshtml
@@ -4,27 +4,33 @@
 @using TaskThree.Models;
 @model PizzaModel;
 
-<div class="flex-card">
-    <form>
-        <fieldset>
-            <label for="image">Путь к изображению:</label>
-            <input class="card-img" type="text" placeholder=" " id="image" name="image" src="@Model.Image" required>
-            <br>
-            <label for="name">Название:</label>
-            <input class="card-name" type="text" placeholder=" " id="name" name="name">
-            <br>
-            <label for="ingredients">Ингредиенты:</label>
-            <input class="card-ingredients" type="text" placeholder=" " id="ingredients" name="ingredients" required>
-            <br>
-            <label for="price">Цена:</label>
-            <input class="card-price" type="number" placeholder=" " id="price" name="price" required>
-            <br>
-            <label for="weight">Вес:</label>
-            <input class="card-weight" type="number" placeholder=" " id="weight" name="weight" required>
-            <br>
 
-            <button class="button-link">Сохранить</button>
-        </fieldset>
+<img class="card-img" src="@Model.Image">
+<h4 class="card-name">@Model.Name</h4>
+<div class="card-ingredients"> @Model.Ingredients </div>
+<div class="card-footer">
+    <div class="card-price">@Model.Price &#8381;</div>
+    <div class="card-weight">@Model.Weight гр.</div>
+    <a href="#" class="button-link">В корзину</a>
+</div>
+<form method="post">
+    <input  asp-for="Id"/>
+            <label asp-for="Name">Название:</label>
+            <input asp-for="Name"/>
+            <label asp-for="Image">Путь к изображению:</label>
+            <input asp-for="Image" />
+
+            <label asp-for="Ingredients">Ингредиенты:</label>
+            <input asp-for="Ingredients" />
+
+            <label asp-for="Price">Цена:</label>
+            <input asp-for="Price" />
+
+            <label asp-for="Weight">Вес:</label>
+            <input asp-for="Weight" />
+            <br>
+            
+        
+        <button class="button-link" type="submit">Сохранить</button>
     </form>
     
-</div>
