--- a/TaskThree/Views/Home/Index.cshtml
+++ b/TaskThree/Views/Home/Index.cshtml
@@ -39,9 +39,7 @@
             }
 
         });
-    </script>
-
-    <script>
+  
         $('.button-link-Edit').on('click', function(){
                 var pizzaId = $(this).data('id');
             if (pizzaId){
@@ -53,19 +51,24 @@
                  location.href = 'Home/PizzaEdit/';
             }
         });
-    </script>
-    <script>
-        $('.button-link-Delete').on('click', function(){
-                var pizzaId = $(this).data('id');
-            if (pizzaId){
-                var url='Home/PizzaEdit/' + encodeURIComponent(pizzaId);
 
-                location.href = url;
-            }
-            else{
-                 location.href = 'Home/PizzaEdit/';
-            }
-        });
+        $('.button-link-Delete').on('click', function (e) {
+                const pizzaId = $(this).data('id');
+                let IsDelete = confirm("Удалить элемент?");
+                if (IsDelete == true){
+                     $.ajax({
+                    url: '/Home/PizzaDelete',
+                    type: 'POST',
+                    data: { id: pizzaId },
+                    success: function () {
+
+                    },
+                    error: function () {
+                        alert('Ошибка при получении данных о пицце.');
+                    }
+                })
+                }               
+        })             
     </script>
 
 }
