--- a/TaskThree/Views/Home/IndexNew.cshtml
+++ b/TaskThree/Views/Home/IndexNew.cshtml
@@ -22,14 +22,13 @@
         </div>
     }
 
+    <!-- Модальное окно -->
     <div class="modal fade" id="pizzaModal" tabindex="-1" role="dialog" aria-labelledby="pizzaModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="pizzaModalLabel">Пицца</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                 </div>
                 <div class="modal-body">
                     <img id="modalImg" src="" class="img-fluid mb-3" />
@@ -40,6 +39,7 @@
             </div>
         </div>
     </div>
+</div>
 
 
  @section scripts
@@ -87,10 +87,8 @@
                 $('#modalPrice').text(pizza.price);
                 $('#modalWeight').text(pizza.weight);
                 $('#pizzaModal').modal('show');
-            }
-                 
-            
-            
+            }               
+                       
             
             $('.button-link-Edit').on('click', function(){
                     var pizzaId = $(this).data('id');
@@ -109,11 +107,11 @@
                     let IsDelete = confirm("Удалить элемент?");
                     if (IsDelete == true){
                          $.ajax({
-                        url: '/PizzaDelete',
+                        url: '/Home/PizzaDelete',
                         type: 'POST',
                         data: { id: pizzaId },
                         success: function () {
-
+                            window.location.reload();
                         },
                         error: function () {
                             alert('Ошибка при получении данных о пицце.');
