--- a/TaskThree/Views/Home/PizzaEdit.cshtml
+++ b/TaskThree/Views/Home/PizzaEdit.cshtml
@@ -6,31 +6,37 @@
 
 
 <img class="card-img" src="@Model.Image">
-<h4 class="card-name">@Model.Name</h4>
-<div class="card-ingredients"> @Model.Ingredients </div>
-<div class="card-footer">
-    <div class="card-price">@Model.Price &#8381;</div>
-    <div class="card-weight">@Model.Weight гр.</div>
-    <a href="#" class="button-link">В корзину</a>
-</div>
-<form method="post">
-    <input  asp-for="Id"/>
-            <label asp-for="Name">Название:</label>
-            <input asp-for="Name"/>
-            <label asp-for="Image">Путь к изображению:</label>
-            <input asp-for="Image" />
 
-            <label asp-for="Ingredients">Ингредиенты:</label>
-            <input asp-for="Ingredients" />
+<form method="post" class="pizza-form">
+    <div class="form-group">
+        <label asp-for="Name"></label>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
+    </div>
 
-            <label asp-for="Price">Цена:</label>
-            <input asp-for="Price" />
+    <div class="form-group">
+        <label asp-for="Image"></label>
+        <input asp-for="Image" class="form-control" />
+        <span asp-validation-for="Image" class="text-danger"></span>
+    </div>
 
-            <label asp-for="Weight">Вес:</label>
-            <input asp-for="Weight" />
-            <br>
-            
-        
-        <button class="button-link" type="submit">Сохранить</button>
-    </form>
-    
+    <div class="form-group">
+        <label asp-for="Ingredients"></label>
+        <input asp-for="Ingredients" class="form-control" />
+        <span asp-validation-for="Ingredients" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Price"></label>
+        <input asp-for="Price" class="form-control" />
+        <span asp-validation-for="Price" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Weight"></label>
+        <input asp-for="Weight" class="form-control" />
+        <span asp-validation-for="Weight" class="text-danger"></span>
+    </div>
+
+    <button type="submit" class="btn-submit">Сохранить</button>
+</form>
