--- a/TaskThree/wwwroot/css/site.css
+++ b/TaskThree/wwwroot/css/site.css
@@ -128,7 +128,8 @@ body {
     border-radius: 20px;
 }
 
-.button-link-Delete :hover {
+.button-link-Delete:hover {
+    border: 2px solid;
     background-color: white;
     border-color: darkred;
     color: darkred;
@@ -141,3 +142,116 @@ input:invalid {
 input:valid {
     border-color: green;
 }
+
+.pizza-form {
+    max-width: 500px;
+    margin: 40px auto;
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 20px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    font-family: sans-serif;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+    color: #333;
+}
+
+.form-control {
+    width: 100%;
+    padding: 10px 14px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-size: 16px;
+    transition: border-color 0.3s ease;
+}
+
+    .form-control:focus {
+        outline: none;
+        border-color: #007bff;
+    }
+
+.text-danger {
+    color: red;
+    font-size: 0.9em;
+}
+
+.btn-submit {
+    border: 2px solid;
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+    background-color: #80c142;
+    color: white;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    
+}
+
+    .btn-submit:hover {
+        border: 2px solid;
+        background-color: white;
+        border-color: #80c142;
+        color: #80c142;
+    }
+
+.pizza-details-card {
+    max-width: 500px;
+    margin: 50px auto;
+    padding: 30px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    font-family: sans-serif;
+    text-align: center;
+    color: #000; /* основной текст Ч чЄрный */
+}
+
+.pizza-image {
+    width: 100%;
+    border-radius: 15px;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
+
+.pizza-title {
+    font-size: 26px;
+    font-weight: bold;
+    color: #666; /* слегка серый */
+    margin-bottom: 10px;
+}
+
+.pizza-ingredients {
+    font-size: 16px;
+    color: #000;
+    margin-bottom: 25px;
+}
+
+.pizza-info {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    margin-bottom: 20px;
+    color: #000;
+}
+
+.pizza-price {
+    font-weight: bold;
+    color: #28a745; /* зелЄный */
+}
+
+.pizza-weight {
+    font-style: italic;
+}
+
+.pizza-button {
+    display: inline-block;
+    pad
